<resources>
    <string name="app_name">Quiz App</string>
    <string name="title_main">Hello there, whizz-kid!</string>
    <string name="text_main">This is your chance to prove how smart you are! Answer all 7 questions correctly
        and unlock the path to glory!</string>
    <string name="instructions_main">Press the button below to show me your skills!</string>
    <string name="button_main">Start Quiz</string>
    <string name="question_1">1. How many eggs can you eat on an empty stomach? </string>
    <string name="answer_1_1">0</string>
    <string name="answer_1_2">1</string>
    <string name="answer_1_3">2</string>
    <string name="answer_1_4">3</string>

    <string name="question_2">2. How many stars does the European Union flag have?  </string>
    <string name="answer_2_1">9</string>
    <string name="answer_2_2">10</string>
    <string name="answer_2_3">12</string>
    <string name="answer_2_4">15</string>

    <string name="question_3">3. Which of the following elements covers the largest surface of our planet? </string>
    <string name="answer_3_1">water</string>
    <string name="answer_3_2">land</string>
    <string name="answer_3_3">ice</string>
    <string name="answer_3_4">metal</string>

    <string name="question_4">4. By mixing the colors red and blue, you get the color: </string>
    <string name="question_5">5. What is the baby animal of a bear called? </string>
    <string name="hint_edit_text">write your answer here</string>
    <string name="question_6">6. Which of the following animals are mammals? </string>
    <string name="question_7">7. How many days are in a year? </string>
    <string name="answer_7_1">360</string>
    <string name="answer_7_2">364</string>
    <string name="answer_7_3">365</string>
    <string name="answer_7_4">366</string>
    <string name="quiz_prize_text">You answered all questions correctly. \nThis is your prize!</string>
    <string name="button_questions">Submit Answers</string>
    <string name="go_to_top">Go to top</string>
    <string name="reset_quiz">Reset Quiz</string>

    <string name ="correct_answers_intro">"Not all your answers were correct :( \nCorrect answers are:"</string>
    <string name ="correct_answer_Q1">Q1: "1"</string>
    <string name ="correct_answer_Q2">Q2: "12"</string>
    <string name ="correct_answer_Q3">Q3: "water"</string>
    <string name ="correct_answer_Q4">Q4: "purple" or "violet"</string>
    <string name ="correct_answer_Q5">Q5: "cub"</string>
    <string name ="correct_answer_Q6">Q6: "first image (beluga) and last image (deer)"</string>
    <string name ="correct_answer_Q7">Q7: "365" and "366" </string>
</resources>
